--- a/vantage/Vantage.Web/Vantage.Web.csproj
+++ b/vantage/Vantage.Web/Vantage.Web.csproj
@@ -22,6 +22,7 @@
 
 
 	<ItemGroup>
+    <PackageReference Include="HotChocolate.Types" Version="12.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.15" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
