moved connection string to user secret added appsettings file to source control added delay startup for debugging program.cs configuration

--- a/vantage/Vantage.Web/Vantage.Web.csproj
+++ b/vantage/Vantage.Web/Vantage.Web.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>27c04960-d13b-4684-8e96-4cce1fc225c4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +28,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.15" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols" Version="5.6.0" />
     <PackageReference Include="StrawberryShake.CodeGeneration.CSharp.Analyzers" Version="12.7.0" />
     <PackageReference Include="StrawberryShake.Transport.Http" Version="12.7.0" />
     <PackageReference Include="StrawberryShake.Transport.WebSockets" Version="12.7.0" />
